Update package name and homepage metadata
Rename package from "cfx-servers.azael" to "azael-cfx-servers" and update the project description and homepage URL to reference servers.azael.dev instead of cfx-servers.azael.dev. This aligns package metadata with the new domain/name while leaving repository and author fields unchanged.

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "cfx-servers.azael",
+  "name": "azael-cfx-servers",
   "version": "1.0.0",
-  "description": "Frontend for cfx-servers.azael.dev",
+  "description": "Frontend for servers.azael.dev",
   "author": "Azael Dev",
   "license": "SEE LICENSE IN LICENSE",
-  "homepage": "https://cfx-servers.azael.dev",
+  "homepage": "https://servers.azael.dev",
   "repository": {
     "type": "git",
     "url": "https://github.com/Azael-Dev/cfx-servers.git"
