--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "country-flag-icons": "^1.6.13",
     "tailwindcss": "^4.1.18",
     "vue": "^3.5.28",
     "vue-router": "^5.0.2"
